<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_mbf</name>
  <version>0.0.0</version>
  <description>Move base flex config for the turtlebot</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>map_server</depend>
  <depend>mbf_costmap_nav</depend>
  <depend>turtlebot3_bringup</depend>
  <depend>turtlebot3_navigation</depend>
</package>
