<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_mbf</name>
  <version>0.0.0</version>
  <description>Move base flex config for the turtlebot</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
</package>
